@@ -1,3 +1,8 @@
+2007-08-07  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* genpass.sh: + accepts one argument -- password length
+	+ uses pipes instead of $(...) (new lines are not stripped now)
+
 2007-06-30  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* libmpdclient.c, libmpdclient.h: + updated to 0.13.0
